<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.air_app.main.MainFragment"
        android:label="@string/mainFragment">
        <action
            android:id="@+id/action_mainFragment_to_measurementFragment"
            app:destination="@id/chartFragment" />
        <action
            android:id="@+id/action_mainFragment_to_ledFragment"
            app:destination="@id/ledFragment" />
        <action
            android:id="@+id/action_mainFragment_to_tableFragment"
            app:destination="@id/tableFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.air_app.menu.login.LoginFragment"
        android:label="@string/loginFragment" />
    <fragment
        android:id="@+id/chartFragment"
        android:name="com.example.air_app.charts.ChartFragment"
        android:label="@string/chartFragment" />
    <fragment
        android:id="@+id/ledFragment"
        android:name="com.example.air_app.led.LedFragment"
        android:label="@string/ledFragment" />
    <fragment
        android:id="@+id/tableFragment"
        android:name="com.example.air_app.table.TableFragment"
        android:label="@string/tableFragment" />
</navigation>